--- a/pages/mobile-softwares.html
+++ b/pages/mobile-softwares.html
@@ -498,7 +498,7 @@ tr {
 
   <li><a href="https://pratikrautsoftware.github.io/pages/computer-softwares.html">Computer Softwares</a></li>
   <li><a href="https://pratikrautsoftware.github.io/pages/mobile-softwares.html" class="active">Mobile Softwares</a></li>
-  <li><a href="#industries">About</a></li>
+  <li><a href="https://pratikrautsoftware.github.io/pages/about.html">About</a></li>
  
   
     </ul>
