--- a/index.html
+++ b/index.html
@@ -819,7 +819,7 @@ function showSlides() {
         <div class="content1" style="background-color:#c2c2c2; color:#000000;">
           <span class="author1">Release date - 17th March 2022</span>
           <h1 class="title1"><a href="#" class="cardTitle1">New Website</a></h1>
-          <p class="author1">https://pratikrautsoftware_2022.github.io</p>
+          <p class="author1">https://pratikrautsoftware.github.io/2022.html</p>
           <p class="author1">Visit</p>
         
 		</div>
