--- a/index.html
+++ b/index.html
@@ -800,7 +800,7 @@ function showSlides() {
   <div class="text-card">  
 
   
-<div class="row1" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware_2022.github.io',}).click();">
+<div class="row1" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware.github.io/2022.html',}).click();">
   <div class="example-1 card1">
     <div class="wrapper1" style="background-color:#e5e5e5; color:#000000;">
       
