--- a/pages/powerpoint-presentation-slides.html
+++ b/pages/powerpoint-presentation-slides.html
@@ -428,9 +428,6 @@ text-align: left;
     box-sizing: border-box;
 }
 
-.row1:hover {
-cursor: pointer;
-}
 
 .card1 {
   padding: 0 1.7rem;
@@ -610,7 +607,7 @@ cursor: pointer;
 
 
 
-<div class="row1" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware_2022.github.io',}).click();">
+<div class="row1">
   <div class="example-1 card1">
     <div class="wrapper1" style="background-color:#e5e5e5; color:#000000;">
       
