--- a/pages/pratik-rauts-steering-wheel-and-pedals.html
+++ b/pages/pratik-rauts-steering-wheel-and-pedals.html
@@ -409,13 +409,21 @@ text-align: left;
 }
 </style>
 
+<style>
+img {
+object-fit:contain;
+  max-width: 100%;
+  height: auto;
+}
+</style>
+
 </head>
 <body>
 <div id="main">
 
 <div class="header" id="header_1">
   <h2 id="header_name">Pratik Raut's Softwares</h2>
-  
+  <br><br>
  
   <nav class="stroke">
     <ul id="nav_bar_ul">
