--- a/pages/mobile-softwares.html
+++ b/pages/mobile-softwares.html
@@ -792,7 +792,7 @@ var mobile_check_348;
 
 
 
-<tr id="ms_9" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: '',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
+<tr id="ms_9" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://play.google.com/store/apps/details?id=com.pratikraut.lockscreen',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
 
 <td style="width:24;" ng-repeat="column in columns" class="rank" data-title-text="rank" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field !== 'change' &amp;&amp; column.field !== 'image' &amp;&amp; column.field !== 'name'" class="ng-scope">
