--- a/index.html
+++ b/index.html
@@ -634,6 +634,68 @@ section .cards .text-card h3{
 }
 
 </style>
+
+<style>
+.custom_card348 {
+display: table;
+width: 50vw;
+height: auto;
+font-size: 20px;
+  background-color:#ffffff;
+  margin: auto;
+     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.2);
+}
+
+
+.custom_card_button348 {
+  border-radius: 4px;
+  border: none;
+  display: block;
+  width: 100%;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 12px 20px;
+  cursor: pointer;
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+  font-size: 20px;
+  position: relative;
+ 
+  cursor: pointer;
+  text-align: center;
+}
+.custom_card_button348:hover {
+  background-color: #ffffff;
+  color:#000000;
+  box-shadow: 10px 30px 50px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+
+
+
+
+.btn_final348 {
+  border-radius: 4px;
+  border: none;
+  background-color: #000000;
+  color: #ffffff;
+  padding: 12px 20px;
+  cursor: pointer;
+  font-size: 20px;
+  text-align: center;
+ display:inline-block;
+
+}
+.btn_final348:hover {
+  background-color: #ffffff;
+  color: #000000;
+   box-shadow: 10px 30px 50px 10px rgba(0, 0, 0, 0.2);
+  -webkit-transition: all 0.2s ease;
+  transition: all 0.2s ease;
+}
+</style>
+
 <style>
 img {
 object-fit:contain;
@@ -758,15 +820,15 @@ function showSlides() {
 -->
   <div>
   <center>Welcome to my website! This website consists of some of my applications and games as the remaining or unpublished ones are for my personal usages.<br><br>Browse more for finding the hidden treasure!<br><br><br>
- <br><br><br><br><br><br>
+ <br><br><br><br>
 
 </center>
-<br><br><br><br><br><br>
+<br><br><br><br>
 
  <div class="container reveal">
   <div class="cards">
   <div class="text-card">  
-
+<!--
   
 <div class="row1">
   <div class="example-1 card1">
@@ -891,9 +953,6 @@ function showSlides() {
     </div>
   </div>
 </div>
-</div>
-</div>
-</div>
 
 <br><br><br>
 
@@ -958,9 +1017,90 @@ function showSlides() {
     </div>
   </div>
 </div>
+-->
+
+
+<center>
+
+<div class="custom_card348">
+<center>
+
+<button class="custom_card_button348" style="background-color: #000000; color: #ffffff; cursor: default;">Main Menu</button>
+<br><br><br>
+<label>Desktop Software</label>&emsp;&emsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<a href="https://pratikrautsoftware.github.io/pages/computer-softwares.html" class="cardTitle1" rel="nofollow" target="_blank"><button class="btn_final348">View All</button></a>
+<br><br>
+<label>Mobile Software</label>&emsp;&emsp;&nbsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<a href="https://pratikrautsoftware.github.io/pages/mobile-softwares.html" class="cardTitle1" rel="nofollow" target="_blank"><button class="btn_final348">View All</button></a>
+<br><br>
+<label>Web Software</label>&emsp;&emsp;&emsp;&nbsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<a href="https://pratikrautsoftware.github.io/pages/web-softwares.html" class="cardTitle1" rel="nofollow" target="_blank"><button class="btn_final348">View All</button></a>
+<br><br><br>
+<a href="https://pratikrautsoftware.github.io/pages/pratik-rauts-steering-wheel-and-pedals.html" class="cardTitle1" rel="nofollow" target="_blank"><button class="btn_final348">Pratik Raut's Steering Wheel and Pedals</button></a>
+<br><br>
+<a href="https://pratikrautsoftware.github.io/pages/powerpoint-presentation-slides.html" class="cardTitle1" rel="nofollow" target="_blank"><button class="btn_final348">PowerPoint Presentation Slides</button></a>
+<br><br>
+
+
+<br><br><br>
+
+
+</center>
+</div>
+
+<br><br><br>
+
+
+<div class="custom_card348">
+<center>
+
+<button class="custom_card_button348" style="background-color: #000000; color: #ffffff; cursor: default;">Development Stage</button>
+<br><br><br>
+<label>Desktop Software</label>&emsp;&emsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<label>2014-Present</label>&emsp;&emsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<button class="btn_final348" style="background-color: green; color: #ffffff; cursor: progress;">Status: Active</button>
+<br><br>
+<label>Mobile Software</label>&emsp;&emsp;&emsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;&ensp;<label>2018-2024</label>&emsp;&emsp;&ensp;<label style="font-size: 28px;">|</label>&emsp;&ensp;&nbsp;<button class="btn_final348" style="background-color: red; color: #ffffff; cursor: not-allowed;">Status: Inactive</button>
+<br><br>
+<label>Web Software</label>&emsp;&emsp;&emsp;&nbsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;&nbsp;<label>2017-Present</label>&emsp;&emsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<button class="btn_final348" style="background-color: green; color: #ffffff; cursor: progress;">Status: Active</button>
+<br><br>
+
+<br><br><br>
+
+
+</center>
+</div>
+
+<br><br><br>
+
+
+<div class="custom_card348">
+<center>
+
+<button class="custom_card_button348" style="background-color: #000000; color: #ffffff; cursor: default;">Contact</button>
+<br><br><br>
+<label>Developer</label>&emsp;&emsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<label class="btn_final348" style="background-color: #000000; color: #ffffff; cursor: text;">Pratik Raut</label>
+<br><br>
+<label>Email Id.</label>&emsp;&emsp;&nbsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<label class="btn_final348" style="background-color: #000000; color: #ffffff; cursor: text;">pratikraut5000@gmail.com</label>
+<br><br>
+<label>Website</label>&emsp;&emsp;&nbsp;&nbsp;<label style="font-size: 28px;">|</label>&emsp;&emsp;<label class="btn_final348" style="background-color: #000000; color: #ffffff; cursor: text;">https://pratikrautsoftware.github.io</label>
+<br><br><br>
+
+<a href="https://pratikrautsoftware.github.io/pages/about.html" class="cardTitle1" rel="nofollow" target="_blank"><button class="btn_final348">More Info</button></a>
+<br><br>
+
+
+<br><br><br>
+
+
+</center>
+</div>
+
+
+</center>
+
+</div>
 </div>
 </div>
 
+
+</div>
+</div>
 
 <br><br><br><br><br><br>
 
