--- a/pages/mobile-softwares.html
+++ b/pages/mobile-softwares.html
@@ -614,7 +614,7 @@ var mobile_check_348;
 
 <td ng-repeat="column in columns" class="name" data-title-text="name" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field === 'name'" class="ng-scope">
-<h3><a  class="ng-binding" >T-Rex Runner<br><br><div class="description">Release date - 22 February 2020<br><br>T-Rex Runner brings back the google chrome's easter egg 'T-Rex Runner'<br>running game for mobile with advanced features</div></a></h3>
+<h3><a  class="ng-binding" >T-Rex Runner (Not available on Play Store)<br><br><div class="description">Release date - 22 February 2020<br><br>T-Rex Runner brings back the google chrome's easter egg 'T-Rex Runner'<br>running game for mobile with advanced features</div></a></h3>
 </div>
 </td>
 
@@ -643,7 +643,7 @@ var mobile_check_348;
 
 <td ng-repeat="column in columns" class="name" data-title-text="name" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field === 'name'" class="ng-scope">
-<h3><a  class="ng-binding" >Matrix Snake<br><br><div class="description">Release date - 10 June 2020<br><br>Matrix Snake is the same old original snake game in the form of matrix!</div></a></h3>
+<h3><a  class="ng-binding" >Matrix Snake (Not available on Play Store)<br><br><div class="description">Release date - 10 June 2020<br><br>Matrix Snake is the same old original snake game in the form of matrix!</div></a></h3>
 </div>
 </td>
 
@@ -755,7 +755,7 @@ var mobile_check_348;
 
 <td ng-repeat="column in columns" class="name" data-title-text="name" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field === 'name'" class="ng-scope">
-<h3><a  class="ng-binding" >Extra Options<br><br><div class="description">Release date - 02 May 2022<br><br>Extra Options consists of some hidden options that can be accessed without<br>the usage of hardware buttons.</div></a></h3>
+<h3><a  class="ng-binding" >Extra Options (Not available on Play Store)<br><br><div class="description">Release date - 02 May 2022<br><br>Extra Options consists of some hidden options that can be accessed without<br>the usage of hardware buttons.</div></a></h3>
 </div>
 </td>
 
@@ -765,7 +765,7 @@ var mobile_check_348;
 
 
 
-<tr id="ms_8" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://play.google.com/store/apps/details?id=com.pratikraut.androidtransfersetup',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
+<tr id="ms_8" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware.github.io/posts/android-transfer.html',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
 
 <td style="width:24;" ng-repeat="column in columns" class="rank" data-title-text="rank" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field !== 'change' &amp;&amp; column.field !== 'image' &amp;&amp; column.field !== 'name'" class="ng-scope">
@@ -786,7 +786,7 @@ var mobile_check_348;
 
 <td ng-repeat="column in columns" class="name" data-title-text="name" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field === 'name'" class="ng-scope">
-<h3><a  class="ng-binding" >Android Transfer<br><br><div class="description">Release date - 05 September 2022<br><br>Android Transfer shares the device's internal storage over Wi-Fi or Hotspot for<br> easy transfer and access of files to/from the device.</div></a></h3>
+<h3><a  class="ng-binding" >Android Transfer (Not available on Play Store)<br><br><div class="description">Release date - 05 September 2022<br><br>Android Transfer shares the device's internal storage over Wi-Fi or Hotspot for<br> easy transfer and access of files to/from the device.</div></a></h3>
 </div>
 </td>
 
