--- a/pages/about.html
+++ b/pages/about.html
@@ -555,13 +555,17 @@ Developer - Pratik Raut<br><br>
 Email - pratikraut5000@gmail.com<br><br><br><br>
 
 
-<h3>Websites</h3><br><br><br><br>
+<h3>Links</h3><br><br><br><br>
 
 Website - <a href="https://pratikrautsoftware.github.io" target="_blank" rel="nofollow">https://pratikrautsoftware.github.io</a><br><br><br>
 
 <!-- New Website - <a href="https://pratikrautsoftware.github.io/2022.html" target="_blank" rel="nofollow"> https://pratikrautsoftware.github.io/2022.html</a><br>(this one was created in Notepad and Notepad++ as an example for Web Development as all of my web projects are for my personal usage including web extensions)<br><br><br> -->
 
-Play Store - <a href="https://play.google.com/store/apps/dev?id=6704722686660902549" target="_blank" rel="nofollow">https://play.google.com/store/apps/dev?id=6704722686660902549</a><br><br><br><br>
+<!-- Play Store - <a href="https://play.google.com/store/apps/dev?id=6704722686660902549" target="_blank" rel="nofollow">https://play.google.com/store/apps/dev?id=6704722686660902549</a>-->
+
+LinkedIn - <a href="https://www.linkedin.com/in/pratikrautsoftware/" target="_blank" rel="nofollow">https://www.linkedin.com/in/pratikrautsoftware/</a>
+
+<br><br><br><br>
 
 
 <h3>Youtube Channels</h3><br><br><br>
