--- a/pages/mobile-softwares.html
+++ b/pages/mobile-softwares.html
@@ -566,7 +566,7 @@ var mobile_check_348;
 <tbody>
 
 
-<tr id="ms_1" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://play.google.com/store/apps/details?id=com.pratikraut.temperatureconverter',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
+<tr id="ms_1" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware.github.io/posts/temperature-converter.html',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
 
 <td style="width:24;" ng-repeat="column in columns" class="rank" data-title-text="rank" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field !== 'change' &amp;&amp; column.field !== 'image' &amp;&amp; column.field !== 'name'" class="ng-scope">
@@ -678,7 +678,7 @@ var mobile_check_348;
 
 </tr>
 !-->
-<tr id="ms_5" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://play.google.com/store/apps/details?id=com.pratikraut.powermenu',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
+<tr id="ms_5" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware.github.io/posts/power-menu.html',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
 
 <td style="width:24;" ng-repeat="column in columns" class="rank" data-title-text="rank" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field !== 'change' &amp;&amp; column.field !== 'image' &amp;&amp; column.field !== 'name'" class="ng-scope">
@@ -706,7 +706,7 @@ var mobile_check_348;
 </tr>
 
 
-<tr id="ms_6" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://play.google.com/store/apps/details?id=com.pratikraut.androidnavbar',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
+<tr id="ms_6" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware.github.io/posts/android-navbar.html',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
 
 <td style="width:24;" ng-repeat="column in columns" class="rank" data-title-text="rank" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field !== 'change' &amp;&amp; column.field !== 'image' &amp;&amp; column.field !== 'name'" class="ng-scope">
@@ -795,7 +795,7 @@ var mobile_check_348;
 
 
 
-<tr id="ms_9" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://play.google.com/store/apps/details?id=com.pratikraut.lockscreen',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
+<tr id="ms_9" onclick="Object.assign(document.createElement('a'), {target: '_blank',href: 'https://pratikrautsoftware.github.io/posts/lock-screen.html',}).click();" class="base ng-scope" ng-repeat-start="user in $data" ng-if="($index + 1) <= totalLazyLoad" ng-class="{expand: expandedItem === user}" ng-click="toggle($event, user)">
 
 <td style="width:24;" ng-repeat="column in columns" class="rank" data-title-text="rank" ng-if="$columns[$index].show(this)">
 <div ng-if="!isMobile &amp;&amp; column.field !== 'change' &amp;&amp; column.field !== 'image' &amp;&amp; column.field !== 'name'" class="ng-scope">
